# cpp-principles-and-practices

./: .gitmodules  CMakeLists.txt  std_lib_facilities.h
Chapter 2 Hello, World!/2.2 Classic First Program/: classicfirstprogram.cpp
Chapter 2/2.2 Classic First Program/: classicfirstprogram.cpp
Chapter 3 Objects, Types, and Values/3.1 Input/: inputbasics.cpp
Chapter 3 Objects, Types, and Values/3.3 Input and type/: inputandtype.cpp
Chapter 4 Computation/C4 Drill/: computationdrill.cpp
Chapter 6 Writing a Program/Simple Calculator/: Token.cpp  Token.h  calcparser.cpp  calcparser.h  simplecalculator.cpp  simplecalculator.h
Chapter 7 Completing a Program/Simple Calculator Mk II/: Token.cpp  Token.h  bettercalculator.cpp  bettercalculator.h  calcparser.cpp
